--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,41 @@
     <title>Upload De Arquivos | Dr.Tech</title>
 
     <style>
+        body {
+            background-color: #233240;
+        }
+
         #Content {
             width: 100%;
             height: 100%;
-            background-color: skyblue;
+            background-color: #233240;
             margin: 0px;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-content: center;
+            justify-content: flex-start;
+            align-items: center;
+        }
 
+        #Formulario {
+            display: flex;
+            color: white;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+        }
+
+        h1 {
+            color: white;
+            font-size: 20px;
+            font-family: sans-serif;
+        }
+
+        form {
+            gap: 20px;
             display: flex;
             flex-direction: column;
             flex-wrap: nowrap;
@@ -21,13 +50,29 @@
             align-items: center;
         }
 
-        #Formulario {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            align-content: center;
-            justify-content: center;
-            align-items: center;
+        #EscolherFile {
+            background-color: #ededed;
+            color: black;
+            padding: 5px;
+            border: none;
+            outline: none;
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        }
+
+        #UploadButton {
+            background-color: #ededed;
+            color: black;
+            padding: 5px;
+            border: none;
+            outline: none;
+            width: 70px;
+            border-radius: 10px;
+            font-weight: 700;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        }
+        #UploadButton:hover {
+            background-color: #c7c7c7;
         }
     </style>
 </head>
@@ -42,8 +87,8 @@
 
 
             <form action="/upload" method="POST" enctype="multipart/form-data">
-                <input type="file" name="file">
-                <input type="submit" value="Upload">
+                <input id="EscolherFile" type="file" name="file">
+                <input id="UploadButton" type="submit" value="Upload">
             </form>
 
         </section>
